--- a/style.css
+++ b/style.css
@@ -7,7 +7,21 @@
 }
 
 body {
-    grid-template-columns: 380px 3fr 1fr;
-    grid-template-rows: 220px 4fr;
+    grid-template-columns: 380px 1fr;
+    grid-template-rows: 220px 1fr;
 }
 
+.sidebar {
+    grid-area: 1/1/3/2;
+    background: #1992d4;
+}
+
+.topbar {
+    grid-area: 1/2/2/3;
+    background: white;
+}
+
+.main {
+    grid-area: 2/2/3/3;
+    background: #e2e8f0;
+}
