--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 }
 
 body {
+    display: grid;
     grid-template-columns: 380px 1fr;
     grid-template-rows: 220px 1fr;
 }
@@ -14,6 +15,7 @@ body {
 .sidebar {
     grid-area: 1/1/3/2;
     background: #1992d4;
+    height: 100vh;
 }
 
 .topbar {
