--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body {
     display: grid;
-    grid-template-columns: 380px 1fr;
+    grid-template-columns: clamp(200px, 25%,380px) 1fr;
     grid-template-rows: 220px 1fr;
 }
 
