--- a/style.css
+++ b/style.css
@@ -16,7 +16,57 @@ body {
     grid-area: 1/1/3/2;
     background: #1992d4;
     height: 100vh;
+    color: white;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 3fr 5fr;
+    grid-template-areas:
+        "logo"
+        "top-nav"
+        "bottom-nav";
+    gap: 80px;
 }
+
+.logo {
+    grid-area: logo;
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+    gap: 16px;
+    align-items: center;
+}
+
+.logo img {
+    width: 60px;
+    height: 60px;
+}
+
+.top-nav {
+    grid-area: top-nav;
+}
+
+.bottom-nav {
+    grid-area: bottom-nav;
+}
+
+.icon-text {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 0px 0px 20px 40px;
+    gap: 20px;
+}
+
+.icon-text img {
+    width: 30px;
+    height: auto;
+}
+
+.icon-text p {
+    font-size: 28px;
+}
+
 
 .topbar {
     grid-area: 1/2/2/3;
