--- a/style.css
+++ b/style.css
@@ -71,6 +71,63 @@ body {
 .topbar {
     grid-area: 1/2/2/3;
     background: white;
+    display: grid;
+    grid-template: 1fr 1fr / 2fr 1fr;
+}
+
+.search {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 32px;
+}
+
+.search input {
+    background-color: #e2e8f0;
+    width: 740px;
+    height: 40px;
+    border: none;
+    border-radius: 20px;
+    margin-left: 18px;
+}
+
+.login {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+.welcome {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.welcome img {
+    margin-left: 32px;
+    margin-right: 20px;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+button {
+    background-color: #1992d4;
+    color: white;
+    width: 120px;
+    height: 50px;
+    border-radius: 25px;
+    border: 1px solid #1992d4;
+    font-size: 20px;
 }
 
 .main {
