--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@ button {
     background: #e2e8f0;
     display: grid;
     grid-template: 1fr / 3fr 1fr;
+    padding: 40px 32px 80px 32px;
 }
 
 .projects {
@@ -145,4 +146,16 @@ button {
 .right {
     background: pink;
     grid-area: 1/2/2/3;
+    display: grid;
+    grid-template: 1fr 1fr / 1fr;
+}
+
+.announcements {
+    background-color: red;
+    grid-area: 1/1/2/2;
+}
+
+.trending {
+    background: beige;
+    grid-area: 2/1/3/2;
 }
