--- a/style.css
+++ b/style.css
@@ -139,8 +139,50 @@ button {
 }
 
 .projects {
-    background: blue;
     grid-area: 1/1/2/2;
+}
+
+.cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 40px;
+    margin-top: 20px;
+    height: 70vh;
+}
+
+.card {
+    background-color: white;
+    border-radius: 10px;
+    border: 1px solid #d4d4d4;
+    display: grid;
+    grid-template-columns: 10px 100%;
+    grid-template-rows: 2fr 1fr;
+}
+
+.color-border {
+    grid-area: 1/1/3/2;
+    background: orange;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.card-content {
+    padding: 40px 30px;
+}
+
+.card-content p {
+    margin-top: 5px;
+    font-size: 20px;
+}
+
+.card-icons {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 30px;
+    padding-right: 40px;
 }
 
 .right {
