--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ button {
 .card {
     background-color: white;
     border-radius: 10px;
-    border: 1px solid #d4d4d4;
+    border: 1px solid #e2e8f0;
     display: grid;
     grid-template-columns: 10px 100%;
     grid-template-rows: 2fr 1fr;
@@ -189,11 +189,34 @@ button {
     grid-area: 1/2/2/3;
     display: grid;
     grid-template: 1fr 1fr / 1fr;
+    margin-left: 40px;
+    gap: 40px;
 }
 
 .announcements {
-    background-color: red;
     grid-area: 1/1/2/2;
+}
+
+.side-card {
+    background-color: white;
+    border: solid 1px #e2e8f0;
+    border-radius: 10px;
+    padding: 40px 30px;
+    margin-top: 20px;
+}
+
+.side-card p {
+    margin-top: 5px;
+    font-size: 20px;
+}
+
+.an1, .an2 {
+    border-bottom: solid 1px #e2e8f0;
+    padding-bottom: 20px;
+}
+
+.an2, .an3 {
+    padding-top: 20px;
 }
 
 .trending {
