--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 .sidebar {
     grid-area: 1/1/3/2;
     background: #1992d4;
-    height: 100vh;
+    height: 100%;
     color: white;
     display: grid;
     grid-template-columns: 1fr;
@@ -135,7 +135,7 @@ button {
     background: #e2e8f0;
     display: grid;
     grid-template: 1fr / 3fr 1fr;
-    padding: 40px 32px 80px 32px;
+    padding: 40px 32px 2px 32px;
 }
 
 .projects {
@@ -222,4 +222,8 @@ button {
 .trending {
     background: beige;
     grid-area: 2/1/3/2;
+    display: grid;
+    grid-template: 1fr 1fr 1fr 1fr / 1fr;
 }
+
+
