--- a/style.css
+++ b/style.css
@@ -67,7 +67,6 @@ body {
     font-size: 28px;
 }
 
-
 .topbar {
     grid-area: 1/2/2/3;
     background: white;
@@ -136,6 +135,7 @@ button {
     display: grid;
     grid-template: 1fr / 3fr 1fr;
     padding: 40px 32px 2px 32px;
+    height: 1100px;
 }
 
 .projects {
