--- a/style.css
+++ b/style.css
@@ -191,6 +191,7 @@ button {
     grid-template: 1fr 1fr / 1fr;
     margin-left: 40px;
     gap: 40px;
+    height: 1000px;
 }
 
 .announcements {
@@ -220,8 +221,15 @@ button {
 }
 
 .trending {
-    background: beige;
     grid-area: 2/1/3/2;
+}
+
+.side-card-trending {
+    background-color: white;
+    border: solid 1px #e2e8f0;
+    border-radius: 10px;
+    padding: 5px 30px;
+    margin-top: 20px;
 }
 
 .profile {
@@ -229,6 +237,7 @@ button {
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    margin-top: 5px;
 }
 
 .profile img {
