--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ button {
     display: grid;
     grid-template-columns: 10px 100%;
     grid-template-rows: 2fr 1fr;
+    box-shadow: 5px 5px 5px grey;
 }
 
 .color-border {
@@ -204,6 +205,7 @@ button {
     border-radius: 10px;
     padding: 40px 30px;
     margin-top: 20px;
+    box-shadow: 5px 5px 5px grey;
 }
 
 .side-card p {
@@ -230,6 +232,7 @@ button {
     border-radius: 10px;
     padding: 5px 30px;
     margin-top: 20px;
+    box-shadow: 5px 5px 5px grey;
 }
 
 .profile {
